tests/NormalTests/paczka1/fuzzy1/57996377.err
Error in line 2: P1me S594 6,4
Error in line 1: uwx6LTr8 S594 45,2
Error in line 6: uwx6LTr8 A715 50,8
Error in line 16: 9oig2Or S638 83,1
Error in line 17: 9oig2Or S594 11,2
Error in line 19: 9oig2Or A413 19,8
Error in line 28: CSBXv3N9wv A413 -1,3
